<resources>
    <string name="app_name">회식나우</string>
    <string name="login">로그인</string>
    <string name="signup">계정이 없으세요?</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="create_account">계정 생성</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">설정</string>
    <string name="find">검색</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend_theme">추천 테마</string>
    <string name="event">이벤트</string>
    <string name="rank">순위</string>
    <string name="real_time_info">실시간 회식정보</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="home">홈</string>
    <string name="reservation">예약 관리</string>
    <string name="personal_data">개인정보 관리</string>

    <string name="title_activity_nearby">지금 갈 수 있는 곳</string>
    <string name="title_activity_detail_info">상세 정보</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">1212008215510398</string>
    <string name="kakao_app_key">ad05d6607e99dd1200cb5361e8e936e4</string>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
